2011-04-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Update path when saving a new document for the first time if the
   follow path option is enabled.
 * src/about.c, src/keyfile.c, THANKS:
   Store VTE path with the session (based on patch by Nicolas
   Sierro, thanks).
   There's still a bug with loading a project at startup; closing the
   project doesn't restore old VTE path.
 * src/filetypes.c, src/filetypes.h:
   Refactor with filetypes_get_filename().
   Make filetypes_get_conf_extension() static.
 * src/utils.c, src/utils.h, src/filetypes.c:
   Make utils_make_filename() return a copy for safety.


2011-04-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Ignore scrolling events in on_update_ui().
 * src/geanyobject.c, src/plugindata.h, src/geanyobject.h,
   src/document.c, doc/pluginsignals.c:
   Add and use signal "document-reload" to the plugin API.
 * src/symbols.c, tagmanager/sql.c:
   Fix mapping of SQL tags for Geany's symbol list (closes #3216474).
 * src/ui_utils.h, src/plugindata.h, src/document.c, src/plugins.c,
   src/document.h, src/ui_utils.c, plugins/geanyfunctions.h:
   Add ui_menu_add_document_items_sorted() and
   document_sort_by_display_name() to the plugin API.


2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>

 * scintilla/lexers/LexCPP.cxx:
   Make highlighting of triple-quoted verbatim an option (Backport
   from Scintilla HG 3602:5536ed81a85b).
 * src/highlighting.c:
   Add highlight for triple-quoted verbatims.
 * data/filetypes.c, data/filetypes.vala, data/filetypes.Genie.conf,
   data/filetypes.Scala.conf:
   Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes.
 * data/filetypes.Genie.conf:
   Copy C styling rather than redefining the styles.
 * src/editor.c:
   Don't set font twice for line numbers and braces.


2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c: