@@ -1,3 +1,10 @@
+2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/document.h, src/editor.c, src/keybindings.c:
+   Revert r5642 "Don't update parent WorkObjects when updating one in
+   real-time" because it broke calltips.
+
+
 2011-04-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * plugins/filebrowser.c:
